# seance

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  seance.desktop  w-codex.md  w2-codex-debrief.md  w2-codex.md
assets/: seance.bash
docs/: AGENT_COLLAB_TEST.md  CONTROL.md  DAEMON.md  DESIGN_PASS_2026-07-21.md  EXPORT.md  FILE-PANES.md  HANDOFF_REFACTOR.md  HOST.md  ORCHESTRATION.md  PERF-TERMINAL.md  PLAYBOOK.md  SHELL-INTEGRATION.md  THEME.md
scripts/: agent-collab-test.sh  bootstrap-deps.sh  check.sh  e2e-thorough.sh  smoke-ctl.sh  upgrade-load-test.sh
src/: agency.rs  agents.rs  app.rs  caps.rs  cmdlog.rs  control.rs  ctl.rs  desktop_notify.rs  events.rs  export_html.rs  fileview.rs  gui_client.rs  host.rs  main.rs  pane.rs  popout.rs  prompts.rs  remote_term.rs  remote_term_view.rs  scratchpad.rs  state.rs  term_font.rs  term_shared.rs  terminal.rs  terminal_view.rs  theme.rs
src/app/: actions.rs  chrome.rs  layout.rs  mod.rs  overview.rs  pads.rs  palette.rs  quicklaunch.rs  sidebar.rs  tiles.rs  util.rs  workspaces.rs
src/ctl/: mod.rs  parse.rs  phone.rs  print.rs  wait.rs
src/daemon/: mod.rs
src/runtime/: engine.rs  mod.rs  protocol.rs  pty_session.rs  snapshot.rs
src/runtime/engine/: control.rs  gui.rs  gui_tests.rs  helpers.rs  mod.rs  spawn.rs  tests.rs
